--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.8.2",
     "@astrojs/check": "^0.6.0",
+    "@vercel/analytics": "^1.3.1",
+    "astro": "^4.8.2",
     "typescript": "^5.4.5"
   }
 }
