--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.6.0",
+    "@astrojs/vercel": "^7.6.0",
     "@vercel/analytics": "^1.3.1",
     "astro": "^4.8.2",
     "typescript": "^5.4.5"
