--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "@vercel/analytics": "^1.3.1",
     "astro": "^4.8.2",
     "typescript": "^5.4.5"
+  },
+  "engines": {
+    "node": ">=20.x"
   }
 }
