--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "globby": "^14.1.0",
     "imagemin": "^9.0.1",
     "imagemin-webp": "^8.0.0",
+    "sharp": "^0.34.2",
     "typescript": "^5.4.5"
   }
 }
