--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "imagemin-webp": "^8.0.0",
     "sharp": "^0.34.2",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "penthouse": "^2.3.3"
   }
 }
