feat: integrate PostCSS PurgeCSS for optimized CSS handling
- Added @fullhuman/postcss-purgecss to devDependencies in package.json and package-lock.json.
- Created postcss.config.cjs to configure PurgeCSS with content paths and safelist for dynamic classes.
- Updated BaseLayout.astro to include global CSS and preload styles.
- Removed inline critical CSS from BaseLayout.astro, maintaining only necessary styles.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "penthouse": "^2.3.3"
+    "@fullhuman/postcss-purgecss": "^7.0.2",
+    "penthouse": "^2.3.3",
+    "postcss": "^8.5.3"
   }
 }
